# sfmlgamejam05

./: .gitignore  CMakeLists.txt  README.md
data/: crimescene_dialogue.txt  crimescene_scene.txt  start_dialogue.txt  start_scene.txt
data/shaders/: fader_f.glsl  fader_v.glsl
osx/: Icon.icns  Info.plist.in  resource_path.mm
other/: resource_path.cpp
src/: Group.hpp  asset.hpp  common.hpp  dialogue.hpp  load_json.cpp  load_json.hpp  main.cpp  megasprite.hpp  pathfind.hpp  persist.hpp  resource_path.hpp  save_text.cpp  save_text.hpp  scene.hpp  sfml_vector_math.hpp  speech.hpp  tilemap.hpp
